<resources>
    <string name="app_name">APP02_103590054</string>
    <string name="name">姓名</string>
    <string name="input_name">輸入姓名</string>
    <string name="sex">性別</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="question">問卷題目</string>
    <string-array name="question_list">
        <item>我覺得Android Programming 很有趣</item>
        <item>我覺得Android Programming 上課很無聊</item>
        <item>我覺得Android Programming 作業很簡單</item>
        <item>我覺得Android Programming 上傳作業很麻煩</item>
        <item>我覺得Android Programming 很複雜</item>
    </string-array>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ansyes">回答YES:</string>
    <string name="ansno">回答NO:</string>
</resources>
